ACR2-1690: Minor regression bug fixed for the mobile number alignment.

--- a/docroot/themes/custom/alshaya_hnm/sass/base/form/input/_input.scss
+++ b/docroot/themes/custom/alshaya_hnm/sass/base/form/input/_input.scss
@@ -54,7 +54,6 @@ textarea {
       border: none;
       border-bottom: 1px solid $grey-ash;
       padding: 0;
-      padding-bottom: 0.625rem;
       color: $black;
 
       &:focus {
